before we set up oauth

--- a/src-client/styles/style.scss
+++ b/src-client/styles/style.scss
@@ -19,7 +19,7 @@ html, body {
 	width: 100%;
 	margin: 0;
 	padding: 0;
-	background-color: #000;
+	background-color: #303030;
 }
 
 
@@ -109,183 +109,63 @@ html, body {
 
 
 body {
-  background:#111;
+  background:#303030;
 }
 
-#load {
-  position:absolute;
-  width:600px;
-  height:36px;
-  left:50%;
-  top:40%;
-  margin-left:-300px;
-  overflow:visible;
-  -webkit-user-select:none;
-  -moz-user-select:none;
-  -ms-user-select:none;
-  user-select:none;
-  cursor:default;
-}
+////loader by http://codepen.io/tystrong/pen/eDmEa \\\\\\\
+.spinner{
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  margin: auto;
+  height: 90%;
+  font-size: 20px;
+  font-family: arial;
+  width: 90%;
+  margin: auto auto;
+  border-radius: 50%;
+  border-right: 9px solid rgba(250,169,56,0.8);
 
-#load div {
-  position:absolute;
-  width:20px;
-  height:36px;
-  opacity:0;
-  font-family:Helvetica, Arial, sans-serif;
-  animation:move 2s linear infinite;
-  -o-animation:move 2s linear infinite;
-  -moz-animation:move 2s linear infinite;
-  -webkit-animation:move 2s linear infinite;
-  transform:rotate(180deg);
-  -o-transform:rotate(180deg);
-  -moz-transform:rotate(180deg);
-  -webkit-transform:rotate(180deg);
-  color:#ff000a;
+  animation: spinning 20s linear infinite;
 }
-
-#load div:nth-child(2) {
-  animation-delay:0.2s;
-  -o-animation-delay:0.2s;
-  -moz-animation-delay:0.2s;
-  -webkit-animation-delay:0.2s;
+.loader {
+	position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
+  margin: auto;
+  font-size: 20px;
+  font-family: arial;
+  margin: auto auto;
+  border-radius: 50%;
+  border-right: 9px solid rgba(250,169,56,0.8);
+  animation: spinning 20s linear infinite;
+  width: 300px;
+  height: 300px;
 }
-#load div:nth-child(3) {
-  animation-delay:0.4s;
-  -o-animation-delay:0.4s;
-  -webkit-animation-delay:0.4s;
-  -webkit-animation-delay:0.4s;
-}
-#load div:nth-child(4) {
-  animation-delay:0.6s;
-  -o-animation-delay:0.6s;
-  -moz-animation-delay:0.6s;
-  -webkit-animation-delay:0.6s;
-}
-#load div:nth-child(5) {
-  animation-delay:0.8s;
-  -o-animation-delay:0.8s;
-  -moz-animation-delay:0.8s;
-  -webkit-animation-delay:0.8s;
-}
-#load div:nth-child(6) {
-  animation-delay:1s;
-  -o-animation-delay:1s;
-  -moz-animation-delay:1s;
-  -webkit-animation-delay:1s;
-}
-#load div:nth-child(7) {
-  animation-delay:1.2s;
-  -o-animation-delay:1.2s;
-  -moz-animation-delay:1.2s;
-  -webkit-animation-delay:1.2s;
-}
-
-@keyframes move {
+@keyframes spinning {
   0% {
-    left:0;
-    opacity:0;
+    transform: rotate(0deg);
+    border-right: 9px solid rgba(250,169,56,0.6);
   }
-	35% {
-		left: 41%;
-		-moz-transform:rotate(0deg);
-		-webkit-transform:rotate(0deg);
-		-o-transform:rotate(0deg);
-		transform:rotate(0deg);
-		opacity:1;
-	}
-	65% {
-		left:59%;
-		-moz-transform:rotate(0deg);
-		-webkit-transform:rotate(0deg);
-		-o-transform:rotate(0deg);
-		transform:rotate(0deg);
-		opacity:1;
-	}
-	100% {
-		left:100%;
-		-moz-transform:rotate(-180deg);
-		-webkit-transform:rotate(-180deg);
-		-o-transform:rotate(-180deg);
-		transform:rotate(-180deg);
-		opacity:0;
-	}
+  5% {border-right-color: rgba(250,169,56,0.4)}
+  10% {border-right-color: rgba(250,169,56,0.6)}
+  15% {border-right-color: rgba(250,169,56,0.4)}
+  20% {border-right-color: rgba(250,169,56,0.6)}
+  25% {border-right-color: rgba(250,169,56,0.4)}
+  30% {border-right-color: rgba(250,169,56,0.6)}
+  35% {border-right-color: rgba(250,169,56,0.4)}
+  40% {border-right-color: rgba(250,169,56,0.6)}
+  45% {border-right-color: rgba(250,169,56,0.4)}
+  50% {border-right-color: rgba(250,169,56,0.6)}
+  55% {border-right-color: rgba(250,169,56,0.4)}
+  60% {border-right-color: rgba(250,169,56,0.6)}
+  65% {border-right-color: rgba(250,169,56,0.4)}
+  70% {border-right-color: rgba(250,169,56,0.6)}
+  75% {border-right-color: rgba(250,169,56,0.4)}
+  80% {border-right-color: rgba(250,169,56,0.6)}
+  85% {border-right-color: rgba(250,169,56,0.4)}
+  90% {border-right-color: rgba(250,169,56,0.6)}
+  95% {border-right-color: rgba(250,169,56,0.4)}
+  100% {
+    transform: rotate(360deg);
+    border-right: 9px solid rgba(250,169,56,0.6);
+  }
 }
-
-@-moz-keyframes move {
-	0% {
-		left:0;
-		opacity:0;
-	}
-	35% {
-		left:41%;
-		-moz-transform:rotate(0deg);
-		transform:rotate(0deg);
-		opacity:1;
-	}
-	65% {
-		left:59%;
-		-moz-transform:rotate(0deg);
-		transform:rotate(0deg);
-		opacity:1;
-	}
-	100% {
-		left:100%;
-		-moz-transform:rotate(-180deg);
-		transform:rotate(-180deg);
-		opacity:0;
-	}
-}
-
-@-webkit-keyframes move {
-	0% {
-		left:0;
-		opacity:0;
-	}
-	35% {
-		left:41%;
-		-webkit-transform:rotate(0deg);
-		transform:rotate(0deg);
-		opacity:1;
-	}
-	65% {
-		left:59%;
-		-webkit-transform:rotate(0deg);
-		transform:rotate(0deg);
-		opacity:1;
-	}
-	100% {
-		left:100%;
-		-webkit-transform:rotate(-180deg);
-		transform:rotate(-180deg);
-		opacity:0;
-	}
-}
-
-@-o-keyframes move {
-	0% {
-		left:0;
-		opacity:0;
-	}
-	35% {
-		left:41%;
-		-o-transform:rotate(0deg);
-		transform:rotate(0deg);
-		opacity:1;
-	}
-	65% {
-		left:59%;
-		-o-transform:rotate(0deg);
-		transform:rotate(0deg);
-		opacity:1;
-	}
-	100% {
-		left:100%;
-		-o-transform:rotate(-180deg);
-		transform:rotate(-180deg);
-		opacity:0;
-	}
-}
-
-
-// loading page from http://codepen.io/dissimulate/pen/vlfyA
