--- a/src-client/styles/style.scss
+++ b/src-client/styles/style.scss
@@ -133,6 +133,7 @@ html, body {
 	left: 0;
 	max-width: 20%;
 	max-height: 55%;
+	height: 50%;
 	background: rgba(150,150,150,0.1);
 	z-index: 1000;
 }
@@ -153,7 +154,7 @@ html, body {
 	width: 45%;
 	max-width: 45%;
 	max-height: 40%;
-	height: 40%;
+	// height: 40%;
 	// background: white;
 	z-index: 1000;
 
@@ -216,13 +217,6 @@ html, body {
 .homeChatNav{
 	border-bottom: rgba(150,150,150,0.6);
 }
-
-
-
-
-
-
-
 
 
 
