got the chat sorta styled for the new pull

--- a/src-client/styles/style.scss
+++ b/src-client/styles/style.scss
@@ -218,6 +218,24 @@ html, body {
 	border-bottom: rgba(150,150,150,0.6);
 }
 
+.chatInputBox{
+	width: 100%;
+	.chatInput{
+		width: 90%;
+	}
+
+}
+
+.chatSend{
+	width: 10%;
+	height: 38px;
+	min-height: 38px;
+}
+
+
+
+
+
 
 
 
