--- a/src-client/styles/style.scss
+++ b/src-client/styles/style.scss
@@ -131,6 +131,7 @@ html, body {
 .homeMeetupBox{
 	position: absolute;
 	left: 0;
+	width: 20%;
 	max-width: 20%;
 	max-height: 55%;
 	// height: 50%;
