--- a/src-client/styles/style.scss
+++ b/src-client/styles/style.scss
@@ -137,6 +137,9 @@ html, body {
 	// height: 50%;
 	background: rgba(250,250,250,0.1);
 	z-index: 1000;
+	overflow-x: hidden;
+	overflow-y: scroll;
+
 }
 
 .homeMeetupBox:hover{
@@ -210,9 +213,14 @@ html, body {
 	min-height: 40px;
 	background: #fde3a7;
 	border-color: #e0d4b8;
+	position: fixed;
+	width: 20%;
+
 }
 
-
+.ClickDisplay{
+	padding-top: 40px;
+}
 
 
 .homeChatNav{
@@ -232,10 +240,6 @@ html, body {
 	height: 38px;
 	min-height: 38px;
 }
-
-
-
-
 
 
 
