--- a/src-client/styles/style.scss
+++ b/src-client/styles/style.scss
@@ -132,18 +132,20 @@ html, body {
 	position: absolute;
 	left: 0;
 	width: 20%;
+	// height: 40px;
 	max-width: 20%;
 	max-height: 55%;
 	// height: 50%;
-	background: rgba(250,250,250,0.1);
+	// background: rgba(250,250,250,0.1);
 	z-index: 1000;
 	overflow-x: hidden;
 	overflow-y: scroll;
+	transition: height 3s;
 
 }
 
 .homeMeetupBox:hover{
-	background: rgba(250,250,250,0.6);
+	// background: rgba(250,250,250,0.6);
 
 	.homeScreenBtn{
 		opacity: 1;
@@ -215,6 +217,7 @@ html, body {
 	border-color: #e0d4b8;
 	position: fixed;
 	width: 20%;
+	z-index: 9999;
 
 }
 
@@ -239,6 +242,22 @@ html, body {
 	width: 10%;
 	height: 38px;
 	min-height: 38px;
+}
+
+
+.eventPics{
+	width: 100%;
+	margin: auto auto;
+}
+
+.eventPicHolder{
+	display: inline-block;
+	width: 20%;
+}
+
+.eventDetailHolder{
+	display: inline-block;
+	width: 70%;
 }
 
 
