got the menu btns to display and undisplay

--- a/src-client/styles/style.scss
+++ b/src-client/styles/style.scss
@@ -307,6 +307,18 @@ html, body {
 	transition: all 3s ease;
 }
 
+.homeNav{
+	.menuBtns{
+		width: 100%;
+		font-size: 25px;
+		color:#faa938;
+		position: relative;
+		right: -50%;
+		margin-top: 15px;
+	}
+}
+
+
 
 
 
