--- a/src-client/styles/style.scss
+++ b/src-client/styles/style.scss
@@ -327,6 +327,18 @@ html, body {
 }
 
 
+.moreInfoViewBox{
+	height: 40%;
+	width: 30%;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	background: white;
+	z-index: 1000;
+	border-top-right-radius: 5%;
+}
+
+
 
 
 
