--- a/src-client/styles/style.scss
+++ b/src-client/styles/style.scss
@@ -341,6 +341,32 @@ html, body {
 }
 
 
+.friendHolder{
+	display: inline-block;
+	width: 20%;
+
+
+	.friendName{
+		font-size: 10px;
+		text-align: center;
+	}
+	.friendPic{
+		border-radius: 100%;
+		width: 100%;
+		padding: 10px;
+	}
+}
+
+
+.boxImage{
+	width: 70%;
+	margin: 20%;
+	margin-left: 16%;
+	margin-top: 5%;
+	margin-bottom: 0;
+}
+
+
 
 
 
